Attempt to ensure pinned-down push pins in map editor are visible on iDevices.

--- a/src/presentation/gridEditorComponent.scss
+++ b/src/presentation/gridEditorComponent.scss
@@ -59,9 +59,8 @@
     &.pinned {
 
       .pushpin {
-        bottom: -3px;
-        left: -11px;
-        transform: rotate(-45deg);
+        transform-origin: 25% 75%;
+        transform: translate(-25%, 25%) rotate(-40deg);
         clip-path: polygon(0% 50%, 50% 100%, 100% 100%, 100% 0%, 0% 0%);
       }
 
